Release 0.27.0 with Blizzard Sorceress and town fixes
